--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,28 @@
     justify-content: center;
     align-items: center;
   }
+  .inputdiv{
+    
+    width: 100%;
+    align-items: center;
+    padding: 10px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(239, 245, 245);
+  }
+  .inputdiv input{
+    width: 70%;
+    height: 90%;
+    border: none;
+    border-radius: 10px;
+    border-style: none;
+    align-items: center;
+    padding: 5px;
+    font-size: x-large;
+    margin: 10px;
+    
+    
+  }
   
